@@ -1,11 +1,9 @@
-//template <Insertable Type>
 template <typename Type>
 inline CSVTabDef &operator<<(CSVTabDef &tab, Type const &value)
 {
     return tab.insert(value);
 }
 
-//template <Insertable Type>
 template <typename Type>
 inline CSVTabDef &operator<<(CSVTabDef &&tab, Type const &value)
 {
