@@ -1,4 +1,3 @@
-//template <Insertable Type>
 template <typename Type>
 inline CSVTabIns &operator<<(CSVTabIns &tab, Type const &value)
 {
@@ -7,7 +6,6 @@ inline CSVTabIns &operator<<(CSVTabIns &tab, Type const &value)
 
         // this one is called from CSVTable::operator CSVTabIns():
         //
-//template <Insertable Type>
 template <typename Type>
 inline CSVTabIns &operator<<(CSVTabIns &&tab, Type const &value)
 {
